# literarium

./: .gitignore  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  env.dev  heroku.yml  manage.py  pyproject.toml  pytest.ini
.github/workflows/: build.yml  workflow-pr.yml
literarium/: asgi.py  settings.py  urls.py  wsgi.py
order/: .views.py.swp  factories.py  urls.py
order/migrations/: 0001_initial.py  0002_order_status.py  0003_remove_order_status.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/test_viewsets/: .test_order_viewset.py.swp  test_order_viewset.py
order/viewsets/: order_viewset.py
product/: .views.py.swp  factories.py  urls.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
staticfiles/: staticfiles.json
tests/: product_serializer_test.py
tests/models/: product_test.py
wait/: product_serializer_test.py
wait/models/: order_test.py  product_test.py  serializer_test.py
